tests/phase0/bad_string.stderr
tests/phase0/bad_string.sl:27:32: error: unterminated string literal
