tests/phase0/bad_string.sl
package demo
const x str = "oops
